initial port of core-list and grid demo

--- a/example/core_list_dart/basic.html
+++ b/example/core_list_dart/basic.html
@@ -142,7 +142,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </core-list-dart>
 
 </template>
-<script type="application/dart" src="core_list_dart.dart"></script>
+<script type="application/dart" src="basic.dart"></script>
 </polymer-element>
 
 </body>
