--- a/lib/src/core-dropdown/core-dropdown.html
+++ b/lib/src/core-dropdown/core-dropdown.html
@@ -183,13 +183,16 @@ not scroll with its container.
     resetTargetDimensions: function() {
       var dims = this.dimensions;
       var style = this.target.style;
-      if (dims.position.h_by === this.localName) {
-        style[dims.position.h] = null;
-        dims.position.h_by = null;
-      }
-      if (dims.position.v_by === this.localName) {
-        style[dims.position.v] = null;
-        dims.position.v_by = null;
+      // Dims may be not define 
+      if(dims) {
+          if (dims.position.h_by === this.localName) {
+              style[dims.position.h] = null;
+              dims.position.h_by = null;
+          }
+          if (dims.position.v_by === this.localName) {
+              style[dims.position.v] = null;
+              dims.position.v_by = null;
+          }
       }
       this.super();
     },
