add back waitForMutation option to clearLower and clearUpper
R=sigmund@google.com

Review URL: https://codereview.chromium.org//1001563002

--- a/lib/src/core-scroll-threshold/core-scroll-threshold.html
+++ b/lib/src/core-scroll-threshold/core-scroll-threshold.html
@@ -176,6 +176,7 @@ Example:
      * Clear the upper threshold, following an `upper-trigger` event.
      *
      * @method clearUpper
+     * @param {boolean} waitForMutation
      */
     clearUpper: function(waitForMutation) {
       if (waitForMutation) {
@@ -193,6 +194,7 @@ Example:
      * Clear the lower threshold, following a `lower-trigger` event.
      *
      * @method clearLower
+     * @param {boolean} waitForMutation
      */
     clearLower: function(waitForMutation) {
       if (waitForMutation) {
