--- a/lib/src/core-animated-pages/transitions/hero-transition.html
+++ b/lib/src/core-animated-pages/transitions/hero-transition.html
@@ -95,7 +95,7 @@ You can configure the duration of the hero transition with the global variable
 <script>
 (function() {
 
-  var webkitStyles = '-webkit-transition' in document.documentElement.style
+  var webkitStyles = '-webkit-transition' in document.documentElement.style;
   var TRANSITION_CSSNAME = webkitStyles ? '-webkit-transition' : 'transition';
   var TRANSFORM_CSSNAME = webkitStyles ? '-webkit-transform' : 'transform';
   var TRANSITION_NAME = webkitStyles ? 'webkitTransition' : 'transition';
@@ -161,7 +161,7 @@ You can configure the duration of the hero transition with the global variable
           }
         })
         h$ = h$.concat(hsa$);
-      }
+      };
 
       for (var i=0, h0; h0=h$[i]; i++) {
         var v = h0.getAttribute('hero-id');
