--- a/lib/src/core-layout-grid/core-layout-grid.html
+++ b/lib/src/core-layout-grid/core-layout-grid.html
@@ -123,7 +123,7 @@ TODO
         // look at each row to find a containing area
         for (var j=0; j<majCount; j++) {
           // get the row vector
-          var vector = matrix[j]
+          var vector = matrix[j];
           // node index at [i,j]
           var nodei = vector[i];
           // if a node is there
