--- a/lib/src/core-range/test/basic.html
+++ b/lib/src/core-range/test/basic.html
@@ -67,7 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       });
       
       test('set min', function(done) {
-        range.min = 10
+        range.min = 10;
         range.max = 50;
         range.value = 30;
         asyncPlatformFlush(function() {
