--- a/lib/src/core-selector/core-selector.html
+++ b/lib/src/core-selector/core-selector.html
@@ -352,9 +352,9 @@ Fired when an item element is tapped.
       updateSelected: function() {
         this.validateSelected();
         if (this.multi) {
-          this.clearSelection(this.selected)
+          this.clearSelection(this.selected);
           this.selected && this.selected.forEach(function(s) {
-            this.setValueSelected(s, true)
+            this.setValueSelected(s, true);
           }, this);
         } else {
           this.valueToSelection(this.selected);
